--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,95 +1,72 @@
 <div class="container" style="text-align:center">
   <h1>Dunkin' Donuts Menu Items Finder</h1>
+  <div *ngIf="blockLocation">
+    <h1>We need your location in order for this tool to work!</h1>
+    <p>It looks like location access was denied. Please enable location services in your browser settings and refresh the page to try again.</p>
+  </div>
 
+  <div *ngIf="!blockLocation">
+    <form (submit)="fetchMenuItems(); $event.preventDefault()">
   
+      <ng-template #loading_location>
+          <div class="spinner-border" role="status">
+            <span class="sr-only"></span>
+          </div>
+          <p>Fetching Location</p>
+      </ng-template>
   
-  <form (submit)="fetchMenuItems(); $event.preventDefault()">
-
-    <div *ngIf="!fetchingLocation;else loading_location">
-      <!-- <div class="form-group">
-        <label for="lat">Latitude:</label>
-        <input
-          type="number"
-          class="form-control"
-          step="any"
-          [(ngModel)]="lat"
-          name="lat"
-          required
-        />
-      </div>
+      <div id="map" style="height: 400px;"></div>
   
       <div class="form-group">
-        <label for="long">Longitude:</label>
-        <input
-          type="number"
-          class="form-control"
-          step="any"
-          [(ngModel)]="long"
-          name="long"
-          required
-        />
-      </div>   -->
+        <label for="dist">Distance (miles):</label>
+        <input type="number" 
+          class="form-control" 
+          step="any" 
+          [(ngModel)]="dist" 
+          name="dist" 
+          required 
+          (change)="generateCircle()"/>
+      </div>
+  
+      <button type="submit" class="mt-3 btn btn-primary" [disabled]="fetchingMenu || processingMenu || lat === null || long === null">
+        Find Menu Items
+      </button>
+    </form>
+  
+    <!-- Display loading spinner when loading is true -->
+    <div *ngIf="fetchingMenu || processingMenu" class="mt-3">
+      <div class="spinner-border" role="status">
+        <span class="sr-only"></span>
+      </div>
+      <p *ngIf="fetchingMenu; else processingMenuLoadingMessage">Fetching Menus from nearby Dunkin</p>
+      <ng-template #processingMenuLoadingMessage><p>Processing Menu</p></ng-template>
     </div>
   
-    <ng-template #loading_location>
-        <div class="spinner-border" role="status">
-          <span class="sr-only"></span>
-        </div>
-        <p>Fetching Location</p>
-    </ng-template>
-
-    <div id="map" style="height: 400px;"></div>
-  
-
-
-    <div class="form-group">
-      <label for="dist">Distance (miles):</label>
-      <input type="number" 
-        class="form-control" 
-        step="any" 
-        [(ngModel)]="dist" 
-        name="dist" 
-        required 
-        (change)="generateCircle()"/>
-    </div>
-
-    <button type="submit" class="mt-3 btn btn-primary" [disabled]="fetchingMenu || processingMenu || lat === null || long === null">
-      Find Menu Items
-    </button>
-  </form>
-
-  <!-- Display loading spinner when loading is true -->
-  <div *ngIf="fetchingMenu || processingMenu" class="mt-3">
-    <div class="spinner-border" role="status">
-      <span class="sr-only"></span>
-    </div>
-    <p *ngIf="fetchingMenu; else processingMenuLoadingMessage">Fetching Menus from nearby Dunkin</p>
-    <ng-template #processingMenuLoadingMessage><p>Processing Menu</p></ng-template>
-  </div>
-
-  <div *ngIf="errorMessage" style="color: red">{{ errorMessage }}</div>
-  
-  <div class="mt-2" id="cheapest-display" #cheapestDisplay>
-    <h2 *ngIf="cheapestLocation">Cheapest Location for a  {{ selectedItem }}:</h2>
-    <div  *ngIf="cheapestLocation">
-      <p>{{ cheapestLocation.address.line1 }} - ${{ cheapestPrice }}</p>
-    </div>
-  </div>
-  <div *ngFor="let category of getCategoryKeys()">
-    <h3 class="mt-2 category-header" (click)="toggleCategory(category)">
-      <i class="fas" [ngClass]="{
-        'fa-chevron-right': !isCategoryVisible(category),
-        'fa-chevron-down': isCategoryVisible(category)
-      }"></i>
-      {{ category }}
-    </h3>
+    <div *ngIf="errorMessage" style="color: red">{{ errorMessage }}</div>
     
-    <div class="category-content" *ngIf="isCategoryVisible(category)">
-      <div 
-        *ngFor="let item of categoryMenuItems[category]" 
-        class="menu-item" 
-        (click)="selectItem(item)">
-        <span class="item-name">{{ item.name }}</span>
+    <div class="mt-2" id="cheapest-display" #cheapestDisplay>
+      <h2 *ngIf="cheapestLocation">Cheapest Location for a  {{ selectedItem }}:</h2>
+      <div  *ngIf="cheapestLocation">
+        <p><a [href]="googleMapsLink">{{ cheapestLocation.address }}</a> - ${{ cheapestPrice }}</p>
+      </div>
+    </div>
+    <div *ngFor="let category of getCategoryKeys()">
+      <h3 class="mt-2 category-header" (click)="toggleCategory(category)">
+        <i class="fas" [ngClass]="{
+          'fa-chevron-right': !isCategoryVisible(category),
+          'fa-chevron-down': isCategoryVisible(category)
+        }"></i>
+        {{ category }}
+      </h3>
+      
+      <div class="category-content" *ngIf="isCategoryVisible(category)">
+        <div 
+          *ngFor="let item of categoryMenuItems[category]" 
+          class="menu-item" 
+          (click)="selectItem(item)">
+          <span class="item-name">{{ item.name }}</span>
+        </div>
       </div>
     </div>
   </div>
+  
