--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,5 +1,6 @@
 <div class="container" style="text-align:center">
   <h1>Dunkin' Donuts Menu Items Finder</h1>
+  <script>alert("We are about to ask for your location, please don't be alarmed")</script>
   <div *ngIf="blockLocation">
     <h1>We need your location in order for this tool to work!</h1>
     <p>It looks like location access was denied. Please enable location services in your browser settings and refresh the page to try again.</p>
