--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -2,74 +2,71 @@
   <h1>Dunkin' Donuts Menu Items Finder</h1>
   <script>alert("We are about to ask for your location, please don't be alarmed")</script>
   <div *ngIf="blockLocation">
-    <h1>We need your location in order for this tool to work!</h1>
-    <p>It looks like location access was denied. Please enable location services in your browser settings and refresh the page to try again.</p>
+    <h3>It looks like your location services are disabled</h3>
+    <p>Enable your location services to get live tracking, or navigate to where you'd like on the map</p>
   </div>
 
-  <div *ngIf="!blockLocation">
-    <p>This was inspired by work from Reddit user <a href="https://www.reddit.com/user/gerunk/">gerunk</a> in his DunkinScout project</p>
-    <p>Check out the original <a href="https://github.com/jack898/dunkinScout">repo</a></p>
-    <form (submit)="fetchMenuItems(); $event.preventDefault()">
-  
-      <ng-template #loading_location>
-          <div class="spinner-border" role="status">
-            <span class="sr-only"></span>
-          </div>
-          <p>Fetching Location</p>
-      </ng-template>
-  
-      <div id="map" style="height: 400px;"></div>
-  
-      <div class="form-group">
-        <label for="dist">Distance (miles):</label>
-        <input type="number" 
-          class="form-control" 
-          step="any" 
-          [(ngModel)]="dist" 
-          name="dist" 
-          required 
-          (change)="generateCircle()"/>
-      </div>
-  
-      <button type="submit" class="mt-3 btn btn-primary" [disabled]="fetchingMenu || processingMenu || lat === null || long === null">
-        Find Menu Items
-      </button>
-    </form>
-  
-    <!-- Display loading spinner when loading is true -->
-    <div *ngIf="fetchingMenu || processingMenu" class="mt-3">
-      <div class="spinner-border" role="status">
-        <span class="sr-only"></span>
-      </div>
-      <p *ngIf="fetchingMenu; else processingMenuLoadingMessage">Fetching Menus from nearby Dunkin</p>
-      <ng-template #processingMenuLoadingMessage><p>Processing Menu</p></ng-template>
-    </div>
-  
-    <div *ngIf="errorMessage" style="color: red">{{ errorMessage }}</div>
-    
-    <div class="mt-2" id="cheapest-display" #cheapestDisplay>
-      <h2 *ngIf="cheapestLocation">Cheapest Location for a  {{ selectedItem }}:</h2>
-      <div  *ngIf="cheapestLocation">
-        <p><a [href]="googleMapsLink">{{ cheapestLocation.address }}</a> - ${{ cheapestPrice }}</p>
-      </div>
-    </div>
-    <div *ngFor="let category of getCategoryKeys()">
-      <h3 class="mt-2 category-header" (click)="toggleCategory(category)">
-        <i class="fas" [ngClass]="{
-          'fa-chevron-right': !isCategoryVisible(category),
-          'fa-chevron-down': isCategoryVisible(category)
-        }"></i>
-        {{ category }}
-      </h3>
-      
-      <div class="category-content" *ngIf="isCategoryVisible(category)">
-        <div 
-          *ngFor="let item of categoryMenuItems[category]" 
-          class="menu-item" 
-          (click)="selectItem(item)">
-          <span class="item-name">{{ item.name }}</span>
+  <p>This was inspired by work from Reddit user <a href="https://www.reddit.com/user/gerunk/">gerunk</a> in his DunkinScout project. Check out the original <a href="https://github.com/jack898/dunkinScout">repo</a></p>
+  <p>Click to drop a pin and change location!</p>
+  <form (submit)="fetchMenuItems(); $event.preventDefault()">
+
+    <ng-template #loading_location>
+        <div class="spinner-border" role="status">
+          <span class="sr-only"></span>
         </div>
+        <p>Fetching Location</p>
+    </ng-template>
+
+    <div id="map" style="height: 400px;"></div>
+
+    <div class="form-group">
+      <label for="dist">Distance (miles):</label>
+      <input type="number" 
+        class="form-control" 
+        step="any" 
+        [(ngModel)]="dist" 
+        name="dist" 
+        required 
+        (change)="generateCircle()"/>
+    </div>
+
+    <button type="submit" class="mt-3 btn btn-primary" [disabled]="fetchingMenu || processingMenu || lat === null || long === null">
+      Find Menu Items
+    </button>
+  </form>
+
+  <!-- Display loading spinner when loading is true -->
+  <div *ngIf="fetchingMenu || processingMenu" class="mt-3">
+    <div class="spinner-border" role="status">
+      <span class="sr-only"></span>
+    </div>
+    <p *ngIf="fetchingMenu; else processingMenuLoadingMessage">Fetching Menus from nearby Dunkin</p>
+    <ng-template #processingMenuLoadingMessage><p>Processing Menu</p></ng-template>
+  </div>
+
+  <div *ngIf="errorMessage" style="color: red">{{ errorMessage }}</div>
+  
+  <div class="mt-2" id="cheapest-display" #cheapestDisplay>
+    <h2 *ngIf="cheapestLocation">Cheapest Location for a  {{ selectedItem }}:</h2>
+    <div  *ngIf="cheapestLocation">
+      <p><a [href]="googleMapsLink">{{ cheapestLocation.address }}</a> - ${{ cheapestPrice }}</p>
+    </div>
+  </div>
+  <div *ngFor="let category of getCategoryKeys()">
+    <h3 class="mt-2 category-header" (click)="toggleCategory(category)">
+      <i class="fas" [ngClass]="{
+        'fa-chevron-right': !isCategoryVisible(category),
+        'fa-chevron-down': isCategoryVisible(category)
+      }"></i>
+      {{ category }}
+    </h3>
+    
+    <div class="category-content" *ngIf="isCategoryVisible(category)">
+      <div 
+        *ngFor="let item of categoryMenuItems[category]" 
+        class="menu-item" 
+        (click)="selectItem(item)">
+        <span class="item-name">{{ item.name }}</span>
       </div>
     </div>
   </div>
-  
